# AirlineTycoon

./: .clang-tidy  .gitmodules  AirlineTycoon.sln  BuildTargets.targets  CMakeLists.txt  README.md  bot.cpp  bot.h
.github/workflows/: workflow.yml
bot_standalone/: Auftrag.cpp  BotHelper.cpp  BotHelper.h  BotPlaner.cpp  BotPlaner.h  BotPlanerAlgo.cpp  BotPlanerAlgo1.cpp  BotPlanerAlgo2.cpp  CMakeLists.txt  Fracht.cpp  GameMechanic.cpp  GameMechanic.h  bot.cpp  bot.h  city.csv  compat.h  compat_album.h  compat_global.cpp  compat_global.h  compat_misc.cpp  compat_misc.h  compat_types.h  defines.h  ker.cpp  main.cpp  planetyp.csv  pnames.csv
libs/: CMakeLists.txt  RakNet.vcxproj  enet.vcxproj  libsmacker.vcxproj
libs/libflic/: libflic.vcxproj  libflic.vcxproj.filters
libs/raknet/: DR_SHA1.cpp
patch/: dlg_ger.patched.res.txt  ein_ger.patched.res.txt  modded_ger.res.txt  std_ger.patched.res.txt
src/: AT.vcxproj  AT.vcxproj.filters  Abend.cpp  Abend.h  AirportView.cpp  AirportView.h  ArabAir.cpp  ArabAir.h  AskBrick.h  Askbrick.cpp  AtNet.cpp  AtNet.h  Aufsicht.cpp  Aufsicht.h  Auftrag.cpp  Bank.cpp  Bank.h  Block.cpp  Bot.cpp  Bot.h  BotActions.cpp  BotConditions.cpp  BotDesigner.cpp  BotDesigner.h  BotFunctions.cpp  BotHelper.cpp  BotHelper.h  BotMisc.cpp  BotPlaner.cpp  BotPlaner.h  BotPlanerAlgo.cpp  BotPlanerAlgo1.cpp  BotPlanerAlgo2.cpp  Brick.cpp  Buero.cpp  Buero.h  CMakeLists.txt  CVideo.cpp  CVideo.h  Checkup.cpp  (+139 more)
src/Res/: resource.h
src/SBLib/: SBLib.vcxproj
src/SBLib/include/: BaseNetworkType.hpp  ENetNetwork.hpp  RAKNetNetwork.hpp  RAKNetRoomCallbacks.hpp  SbLib.h  network.h
src/SBLib/libs/rooms-plugin/: RoomsContainer.cpp  RoomsContainer.h  RoomsPlugin.cpp  RoomsPlugin.h
src/SBLib/source/: CBitmap.cpp  CCursor.cpp  CFont.cpp  GfxLib.cpp  Network.cpp  Tool2.cpp
src/SBLib/source/NetworkTypes/: ENetNetwork.cpp  RAKNetNetwork.cpp
src/SSE/: SSE.cpp  SSE.vcxproj
src/TeakLibW/: Album.cpp  Bitmap.cpp  Debug.cpp  Math.cpp  TeakFile.cpp  TeakLibW.vcxproj  TeakStr.cpp  Test.cpp  TextRes.cpp
